2013-04-24-1.0.1/modules/pluto-module-dataprocess/src/main/java/com/clican/pluto/dataprocess/dpl/parser/javacc/DplParserJavacc.java
/* Generated By:JavaCC: Do not edit this line. DplParserJavacc.java */
package com.clican.pluto.dataprocess.dpl.parser.javacc;

import java.util.ArrayList;
import java.util.List;

import com.clican.pluto.dataprocess.dpl.function.impl.Divide;
import com.clican.pluto.dataprocess.dpl.function.impl.Minus;
import com.clican.pluto.dataprocess.dpl.function.impl.Multi;
import com.clican.pluto.dataprocess.dpl.function.impl.Plus;
import com.clican.pluto.dataprocess.dpl.parser.bean.Column;
import com.clican.pluto.dataprocess.dpl.parser.bean.PrefixAndSuffix;
import com.clican.pluto.dataprocess.dpl.parser.eunmeration.CompareType;
import com.clican.pluto.dataprocess.dpl.parser.object.From;
import com.clican.pluto.dataprocess.dpl.parser.object.Function;
import com.clican.pluto.dataprocess.dpl.parser.object.Select;
import com.clican.pluto.dataprocess.dpl.parser.object.filter.AndFilter;
import com.clican.pluto.dataprocess.dpl.parser.object.filter.CompareFilter;
import com.clican.pluto.dataprocess.dpl.parser.object.filter.Filter;
import com.clican.pluto.dataprocess.dpl.parser.object.filter.OrFilter;

public class DplParserJavacc implements DplParserJavaccConstants {

	final public void BindVariable() throws ParseException {
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case S_BIND:
			jj_consume_token(S_BIND);
			break;
		case 50:
			jj_consume_token(50);
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case S_NUMBER:
				jj_consume_token(S_NUMBER);
				break;
			case S_IDENTIFIER:
				jj_consume_token(S_IDENTIFIER);
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case 51:
					jj_consume_token(51);
					jj_consume_token(S_IDENTIFIER);
					break;
				default:
					jj_la1[0] = jj_gen;
					;
				}
				break;
			default:
				jj_la1[1] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			break;
		default:
			jj_la1[2] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	final public String SubQuery() throws ParseException {
		SelectStatement();
		{
			if (true)
				return "";
		}
		throw new Error("Missing return statement in function");
	}

	final public void parse() throws ParseException {
		SelectStatement();
		FromClause();
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case K_WHERE:
			WhereClause();
			break;
		default:
			jj_la1[3] = jj_gen;
			;
		}
	}

	final public Select SelectStatement() throws ParseException {
		Select select;
		jj_consume_token(K_SELECT);
		select = SelectList();
		{
			if (true)
				return select;
		}
		throw new Error("Missing return statement in function");
	}

	final public Select SelectList() throws ParseException {
		List<Column> columns = new ArrayList<Column>();
		Select select = new Select(columns);
		Column column = null;
		column = SelectItem();
		columns.add(column);
		label_1: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 52:
				;
				break;
			default:
				jj_la1[4] = jj_gen;
				break label_1;
			}
			jj_consume_token(52);
			column = SelectItem();
			columns.add(column);
		}
		{
			if (true)
				return select;
		}
		throw new Error("Missing return statement in function");
	}

	final public String OracleObjectName() throws ParseException {
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case S_IDENTIFIER:
			jj_consume_token(S_IDENTIFIER);
			{
				if (true)
					return token.image;
			}
			break;
		case S_QUOTED_IDENTIFIER:
			jj_consume_token(S_QUOTED_IDENTIFIER);
			String s = token.image;
			{
				if (true)
					return s.substring(1, s.length() - 1);
			}
			break;
		default:
			jj_la1[5] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

	final public Column SelectItem() throws ParseException {
		String columnName = null;
		PrefixAndSuffix pas;
		pas = SQLSimpleExpression();
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case K_AS:
		case S_IDENTIFIER:
		case S_QUOTED_IDENTIFIER:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case K_AS:
				jj_consume_token(K_AS);
				break;
			default:
				jj_la1[6] = jj_gen;
				;
			}
			columnName = OracleObjectName();
			break;
		default:
			jj_la1[7] = jj_gen;
			;
		}
		if (columnName == null || columnName.length() == 0) {
			if (pas.getFunction() != null) {
			} else {
				String suffix = pas.getSuffix();
				String prefix = pas.getPrefix();
				if (suffix == null || suffix.length() == 0) {
					columnName = prefix;
				} else {
					if (suffix.contains(".")) {
						columnName = suffix.substring(suffix.lastIndexOf(".") + 1);
					} else {
						columnName = suffix;
					}
				}
			}
		}
		Column col = new Column(pas, columnName);
		{
			if (true)
				return col;
		}
		throw new Error("Missing return statement in function");
	}

	final public From FromClause() throws ParseException {
		List<String> variableNames = new ArrayList<String>();
		From from = new From(variableNames);
		String tableName = null;
		jj_consume_token(K_FROM);
		tableName = TableReference();
		variableNames.add(tableName);
		label_2: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 52:
				;
				break;
			default:
				jj_la1[8] = jj_gen;
				break label_2;
			}
			jj_consume_token(52);
			tableName = TableReference();
			variableNames.add(tableName);
		}
		{
			if (true)
				return from;
		}
		throw new Error("Missing return statement in function");
	}

	final public String TableReference() throws ParseException {
		String tableName = null;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case S_IDENTIFIER:
		case S_QUOTED_IDENTIFIER:
			tableName = TableName();
			break;
		case K_LEFT_BRACE:
			jj_consume_token(K_LEFT_BRACE);
			SubQuery();
			jj_consume_token(K_RIGHT_BRACE);
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case K_AS:
				jj_consume_token(K_AS);
				tableName = OracleObjectName();
				break;
			default:
				jj_la1[9] = jj_gen;
				;
			}
			{
				if (true)
					return tableName;
			}
			break;
		default:
			jj_la1[10] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

	final public PrefixAndSuffix SQLSimpleExpression() throws ParseException {
		Function function = null;
		List<Object> params = new ArrayList<Object>();
		Object param;
		param = SQLMultiplicativeExpression();
		params.add(param);
		label_3: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 53:
			case 54:
				;
				break;
			default:
				jj_la1[11] = jj_gen;
				break label_3;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 53:
				jj_consume_token(53);
				if (function != null) {
					params.clear();
					params.add(function);
				}
				function = new Plus();
				try {
					function.setParams(params);
				} catch (Exception e) {
					{
						if (true)
							throw new ParseException(e.getMessage());
					}
				}
				break;
			case 54:
				jj_consume_token(54);
				if (function != null) {
					params.clear();
					params.add(function);
				}
				function = new Minus();
				try {
					function.setParams(params);
				} catch (Exception e) {
					{
						if (true)
							throw new ParseException(e.getMessage());
					}
				}
				break;
			default:
				jj_la1[12] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			param = SQLMultiplicativeExpression();
			params.add(param);
		}
		if (function != null) {
			{
				if (true)
					return new PrefixAndSuffix(function);
			}
		} else {
			PrefixAndSuffix pas;
			if (param instanceof Function) {
				pas = new PrefixAndSuffix((Function) param);
			} else {
				try {
					pas = new PrefixAndSuffix((String) param);
				} catch (Exception e) {
					{
						if (true)
							throw new ParseException(e.getMessage());
					}
				}

			}
			{
				if (true)
					return pas;
			}
		}
		throw new Error("Missing return statement in function");
	}

	final public Object SQLMultiplicativeExpression() throws ParseException {
		Function function = null;
		List<Object> params = new ArrayList<Object>();
		Object param;
		param = SQLExponentExpression();
		params.add(param);
		label_4: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 55:
			case 56:
				;
				break;
			default:
				jj_la1[13] = jj_gen;
				break label_4;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 55:
				jj_consume_token(55);
				if (function != null) {
					params.clear();
					params.add(function);
				}
				function = new Multi();
				try {
					function.setParams(params);
				} catch (Exception e) {
					{
						if (true)
							throw new ParseException(e.getMessage());
					}
				}
				break;
			case 56:
				jj_consume_token(56);
				if (function != null) {
					params.clear();
					params.add(function);
				}
				function = new Divide();
				try {
					function.setParams(params);
				} catch (Exception e) {
					{
						if (true)
							throw new ParseException(e.getMessage());
					}
				}
				param = SQLExponentExpression();
				params.add(param);
				break;
			default:
				jj_la1[14] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
		if (function != null) {
			{
				if (true)
					return function;
			}
		} else {
			{
				if (true)
					return param;
			}
		}
		throw new Error("Missing return statement in function");
	}

	final public Object SQLExponentExpression() throws ParseException {
		Object all = "";
		all = SQLPrimaryExpression();
		{
			if (true)
				return all;
		}
		throw new Error("Missing return statement in function");
	}

	final public Object SQLPrimaryExpression() throws ParseException {
		Object expr = null;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case S_NUMBER:
			jj_consume_token(S_NUMBER);
			break;
		case S_CHAR_LITERAL:
			jj_consume_token(S_CHAR_LITERAL);
			break;
		case K_LEFT_BRACE:
			jj_consume_token(K_LEFT_BRACE);
			if (jj_2_1(3)) {
				SelectStatement();
			} else {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case K_LEFT_BRACE:
				case S_NUMBER:
				case S_IDENTIFIER:
				case S_BIND:
				case S_CHAR_LITERAL:
				case S_QUOTED_IDENTIFIER:
				case 50:
					expr = SQLSimpleExpression();
					break;
				default:
					jj_la1[15] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
			}
			jj_consume_token(K_RIGHT_BRACE);
			break;
		case S_BIND:
		case 50:
			BindVariable();
			break;
		default:
			jj_la1[16] = jj_gen;
			if (jj_2_2(2147483647)) {
				expr = FunctionCall();
			} else {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case S_IDENTIFIER:
				case S_QUOTED_IDENTIFIER:
					expr = TableColumn();
					break;
				default:
					jj_la1[17] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
			}
		}
		if (expr != null) {
			{
				if (true)
					return expr;
			}
		} else {
			{
				if (true)
					return token.image;
			}
		}
		throw new Error("Missing return statement in function");
	}

	final public String FunctionReference() throws ParseException {
		String name;
		name = ObjectReference();
		{
			if (true)
				return name;
		}
		throw new Error("Missing return statement in function");
	}

	final public Function FunctionCall() throws ParseException {
		String functionName = "";
		Function function = null;
		List<Object> params = new ArrayList<Object>();
		functionName = FunctionReference();
		Class<?> clazz = null;
		try {
			clazz = Class.forName("com.clican.pluto.dataprocess.dpl.function.impl." + functionName.substring(0, 1).toUpperCase() + functionName.substring(1));
			function = (Function) clazz.newInstance();
		} catch (Exception e) {

		}
		jj_consume_token(K_LEFT_BRACE);
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case K_LEFT_BRACE:
		case S_NUMBER:
		case S_IDENTIFIER:
		case S_BIND:
		case S_CHAR_LITERAL:
		case S_QUOTED_IDENTIFIER:
		case 50:
			params = FunctionArgumentList();
			break;
		default:
			jj_la1[18] = jj_gen;
			;
		}
		jj_consume_token(K_RIGHT_BRACE);
		try {
			function.setParams(params);
		} catch (Exception e) {
			{
				if (true)
					throw new ParseException(e.getMessage());
			}
		}
		{
			if (true)
				return function;
		}
		throw new Error("Missing return statement in function");
	}

	final public List<Object> FunctionArgumentList() throws ParseException {
		List<Object> params = new ArrayList<Object>();
		Object param;
		param = FunctionArgument();
		params.add(param);
		label_5: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 52:
				;
				break;
			default:
				jj_la1[19] = jj_gen;
				break label_5;
			}
			jj_consume_token(52);
			param = FunctionArgument();
			params.add(param);
		}
		{
			if (true)
				return params;
		}
		throw new Error("Missing return statement in function");
	}

	final public Object FunctionArgument() throws ParseException {
		Object param;
		if (jj_2_3(2)) {
			param = OracleObjectName();
			jj_consume_token(57);
		} else if (jj_2_4(4)) {
			param = OracleObjectName();
			jj_consume_token(51);
			OracleObjectName();
			jj_consume_token(57);
		} else {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case K_LEFT_BRACE:
			case S_NUMBER:
			case S_IDENTIFIER:
			case S_BIND:
			case S_CHAR_LITERAL:
			case S_QUOTED_IDENTIFIER:
			case 50:
				param = SQLSimpleExpression();
				break;
			default:
				jj_la1[20] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
		{
			if (true)
				return param;
		}
		throw new Error("Missing return statement in function");
	}

	final public Filter WhereClause() throws ParseException {
		Filter filter;
		jj_consume_token(K_WHERE);
		filter = FilterExpression();
		{
			if (true)
				return filter;
		}
		throw new Error("Missing return statement in function");
	}

	final public Filter FilterExpression() throws ParseException {
		List<Filter> filterList = new ArrayList<Filter>();
		Filter filter = null;
		filter = FilterAndExpression();
		filterList.add(filter);
		label_6: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case K_OR:
				;
				break;
			default:
				jj_la1[21] = jj_gen;
				break label_6;
			}
			jj_consume_token(K_OR);
			filter = FilterAndExpression();
			filterList.add(filter);
		}
		Filter previousFilter = filterList.get(0);
		for (int i = 1; i < filterList.size(); i++) {
			previousFilter = new OrFilter(previousFilter, filterList.get(i));
		}
		{
			if (true)
				return previousFilter;
		}
		throw new Error("Missing return statement in function");
	}

	final public Filter FilterAndExpression() throws ParseException {
		List<Filter> filterList = new ArrayList<Filter>();
		Filter filter = null;
		filter = FilterBraceExpression();
		filterList.add(filter);
		label_7: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case K_AND:
				;
				break;
			default:
				jj_la1[22] = jj_gen;
				break label_7;
			}
			jj_consume_token(K_AND);
			filter = FilterBraceExpression();
			filterList.add(filter);
		}
		Filter previousFilter = filterList.get(0);
		for (int i = 1; i < filterList.size(); i++) {
			previousFilter = new AndFilter(previousFilter, filterList.get(i));
		}
		{
			if (true)
				return previousFilter;
		}
		throw new Error("Missing return statement in function");
	}

	final public Filter FilterBraceExpression() throws ParseException {
		Filter filter = null;
		if (jj_2_5(2147483647)) {
			jj_consume_token(K_LEFT_BRACE);
			filter = FilterExpression();
			jj_consume_token(K_RIGHT_BRACE);
		} else {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case K_LEFT_BRACE:
			case S_NUMBER:
			case S_IDENTIFIER:
			case S_BIND:
			case S_CHAR_LITERAL:
			case S_QUOTED_IDENTIFIER:
			case 50:
				filter = CompareExpression();
				break;
			default:
				jj_la1[23] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
		{
			if (true)
				return filter;
		}
		throw new Error("Missing return statement in function");
	}

	final public CompareFilter CompareExpression() throws ParseException {
		PrefixAndSuffix left = null;
		PrefixAndSuffix right = null;
		CompareType compareType = null;
		CompareFilter filter = null;
		/*
		 * Only after looking past "(", Expression() and "," we will know that
		 * it is expression list
		 */

		left = SQLSimpleExpression();
		compareType = OperatorExpression();
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case K_LEFT_BRACE:
		case S_NUMBER:
		case S_IDENTIFIER:
		case S_BIND:
		case S_CHAR_LITERAL:
		case S_QUOTED_IDENTIFIER:
		case 50:
			right = SQLSimpleExpression();
			break;
		default:
			jj_la1[24] = jj_gen;
			;
		}
		try {
			filter = new CompareFilter(left, right, compareType);
			{
				if (true)
					return filter;
			}
		} catch (Exception e) {
			{
				if (true)
					throw new ParseException(e.getMessage());
			}
		}
		throw new Error("Missing return statement in function");
	}

	final public CompareType OperatorExpression() throws ParseException {
		String operation = null;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case K_LEFT_OUTER_JOIN:
			jj_consume_token(K_LEFT_OUTER_JOIN);
			break;
		case K_NOT_EQUAL:
			jj_consume_token(K_NOT_EQUAL);
			break;
		case K_GREAT_EQUAL:
			jj_consume_token(K_GREAT_EQUAL);
			break;
		case K_AFTER_NEAR:
			jj_consume_token(K_AFTER_NEAR);
			break;
		case K_GREAT:
			jj_consume_token(K_GREAT);
			break;
		case K_LESS_EQUAL:
			jj_consume_token(K_LESS_EQUAL);
			break;
		case K_BEFORE_NEAR:
			jj_consume_token(K_BEFORE_NEAR);
			break;
		case K_LESS:
			jj_consume_token(K_LESS);
			break;
		case K_NOT_IN:
			jj_consume_token(K_NOT_IN);
			break;
		case K_IN:
			jj_consume_token(K_IN);
			break;
		case K_IS_NOT_NULL:
			jj_consume_token(K_IS_NOT_NULL);
			break;
		case K_IS_NULL:
			jj_consume_token(K_IS_NULL);
			break;
		case K_IS_NOT_EMPTY:
			jj_consume_token(K_IS_NOT_EMPTY);
			break;
		case K_IS_EMPTY:
			jj_consume_token(K_IS_EMPTY);
			break;
		case K_NOT_LIKE:
			jj_consume_token(K_NOT_LIKE);
			break;
		case K_LIKE:
			jj_consume_token(K_LIKE);
			break;
		case K_EQUAL:
			jj_consume_token(K_EQUAL);
			break;
		default:
			jj_la1[25] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		operation = token.image;
		;
